# ignition

./: .gitignore  .travis.yml  README.md  pyproject.toml  scripts.py
features/: git.feature  hello.feature
features/steps/: git.py  hello.py  scripts.py
ignition/: ignite.py  main.py  parser.py
ignition/app/: app.py  ignite.py
ignition/toolchain/: git.py  tool.py
ignition/toolchain/git_template/: ignition_default_git_commit.txt
tests/: test_ignition.py
