[tool.poetry]
name = "ignition"
version = "0.1.0"
description = "Developer automation"
authors = ["Tuhin Nair <tuhinnair444@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
