[tool.poetry]
authors = ["Tuhin Nair <tuhinnair444@gmail.com>"]
description = "Developer automation"
name = "ignition"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
behave = "^1.2.6"
black = "^20.8b1"
flake8 = "^3.9.0"

[tool.poetry.scripts]
ignition = "ignition.main:main"
unittest = "scripts:unittest"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
